Fix footer link flex alignment

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -49,4 +49,5 @@ body > * {
 
 .footer__link {
   margin-bottom: 0.5rem;
+  align-items: start;
 }
